--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg sticky-top">
@@ -55,17 +56,21 @@
           <div class="search ps-3 pe-3 d-none d-lg-block">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-          <a class="btn main-btn rounded-pill" href="">Login</a>
+          <a class="btn main-btn btn-outline-danger rounded-pill" href=""
+            >Login</a
+          >
         </div>
       </div>
     </nav>
     <div class="landing d-flex justify-content-center align-items-center">
-      <div class="text-center text-light">
+      <div class="text-center text-light text-landing">
         <h1>Taste the Creativity</h1>
         <p class="text-white-50 fs-6 mb-4">
           We make awesome graphic and web design
         </p>
-        <a class="btn main-btn rounded-pill" href="">Get Started</a>
+        <a class="btn main-btn btn-outline-danger rounded-pill" href=""
+          >Get Started</a
+        >
       </div>
     </div>
     <div class="features text-center py-5">
@@ -139,49 +144,51 @@
           <li>App</li>
         </ul>
         <div class="row">
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-01.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-02.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-03.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-04.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-05.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-06.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-07.jpg" alt="" />
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-3 work-1">
             <div class="box bg-white mb-3" data-work="Application">
               <img class="img-fluid" src="images/work-08.jpg" alt="" />
             </div>
           </div>
         </div>
         <div class="d-flex justify-content-center mt-5">
-          <a class="btn main-btn rounded-pill text-uppercase" href=""
+          <a
+            class="btn main-btn btn-outline-danger rounded-pill text-uppercase"
+            href=""
             >I Want More</a
           >
         </div>
@@ -215,13 +222,15 @@
                 orci porta dapibus. Proin eget tortor risus. Donec sollicitudin
                 molestie malesuada.
               </p>
-              <a class="btn main-btn rounded-pill text-uppercase" href=""
+              <a
+                class="btn main-btn btn-outline-danger rounded-pill text-uppercase"
+                href=""
                 >I Want More</a
               >
             </div>
           </div>
           <div class="col-lg-8">
-            <div class="image">
+            <div class="image-stuff">
               <img class="img-fluid" src="images/laptop.png" alt="" />
             </div>
           </div>
@@ -230,15 +239,15 @@
     </div>
     <div class="team text-center py-5">
       <div class="container py-5">
-        <h2 class="fw-bold mb-4">Meet The Team</h2>
-        <p class="text-black-50 mb-5">
+        <h2 class="fw-bold mb-4 heading">Meet The Team</h2>
+        <p class="text-black-50 mb-5 para">
           Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit,
           eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta
           dapibus. Proin eget tortor risus. Donec sollicitudin molestie
           malesuada.
         </p>
         <div class="row">
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 team-1">
             <div class="box bg-white">
               <img class="img-fluid" src="images/team-1.png" alt="" />
               <h4 class="p-3 text-light">Luke Skywalker</h4>
@@ -248,7 +257,7 @@
               </blockquote>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 team-1">
             <div class="box bg-white">
               <img class="img-fluid" src="images/team-2.png" alt="" />
               <h4 class="p-3 text-light">Luke Skywalker</h4>
@@ -258,7 +267,7 @@
               </blockquote>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 team-2">
             <div class="box bg-white">
               <img class="img-fluid" src="images/team-3.png" alt="" />
               <h4 class="p-3 text-light">Luke Skywalker</h4>
@@ -268,7 +277,7 @@
               </blockquote>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 team-2">
             <div class="box bg-white">
               <img class="img-fluid" src="images/team-4.png" alt="" />
               <h4 class="p-3 text-light">Luke Skywalker</h4>
@@ -312,7 +321,9 @@
         cancel anytime
       </p>
       <div class="d-flex justify-content-center mt-5">
-        <a class="btn main-btn rounded-pill text-uppercase" href=""
+        <a
+          class="btn main-btn btn-outline-danger rounded-pill text-uppercase"
+          href=""
           >I Want More</a
         >
       </div>
@@ -355,7 +366,9 @@
         </div>
       </div>
       <div class="d-flex justify-content-center mt-5">
-        <a class="btn main-btn rounded-pill text-uppercase" href=""
+        <a
+          class="btn main-btn btn-outline-danger rounded-pill text-uppercase"
+          href=""
           >More Stories</a
         >
       </div>
@@ -381,7 +394,7 @@
     </div>
     <div class="footer py-5 text-white-50 text-center text-md-start">
       <div class="container">
-        <div class="row">
+        <div class="row foot">
           <div class="col-md-6 col-lg-4">
             <div class="info mb-5">
               <img src="images/logo.png" alt="" />
@@ -427,7 +440,10 @@
                 Get in touch with us via mail phone.We are waiting for your call
                 or message
               </p>
-              <a href="#" class="btn main-btn rounded-pill w-100"
+              <a
+                href="#"
+                class="btn main-btn btn-outline-danger rounded-pill w-100"
+                role="button"
                 >graphberry@gmail.com</a
               >
               <ul class="d-flex mt-5 list-unstyled gap-4">
@@ -468,5 +484,29 @@
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+      ScrollReveal({
+        distance: "60px",
+        duration: 1000,
+        delay: 400,
+      });
+      ScrollReveal().reveal(".text", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".image-stuff", { delay: 100, origin: "right" });
+      ScrollReveal().reveal(".main-title", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".card", { delay: 100, origin: "bottom" });
+      ScrollReveal().reveal(".techs", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".description", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".text-landing", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".heading", { delay: 100, origin: "left" });
+      ScrollReveal().reveal(".team-1", { delay: 100, origin: "bottom" });
+      ScrollReveal().reveal(".team-2", { delay: 100, origin: "bottom" });
+      ScrollReveal().reveal(".work-1", { delay: 100, origin: "bottom" });
+      ScrollReveal().reveal(".feat", { delay: 100, origin: "bottom" });
+      ScrollReveal().reveal(".para", { delay: 100, origin: "right" });
+      ScrollReveal().reveal(".foot", {
+        delay: 100,
+        origin: "bottom",
+      });
+    </script>
   </body>
 </html>
